# OKPF

./: .gitignore  AGENTS.md  AI_DISCOVERY.md  AI_MANIFEST.md  AUTHORS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  HANDOFF.md  LICENSE  NOTICE  PROJECT_STATUS.md  README.md  ROADMAP.md  SPEC.md  ai-manifest.md  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: adopter-feedback.md  benchmark-result.md
.github/workflows/: ci.yml
docs/: MODULE_INDEX.md  adoption-outreach-kit.md  adoption-strategy.md  agent-interoperability.md  ai-integration.md  benchmark-plan.md  benchmark-results.md  blockchain.md  concepts.md  examples.md  five-minutes.md  future-knowledge-sources.md  git-native-workflow.md  historical-evidence-packs.md  import-report.md  licensing-strategy.md  licensing.md  manifest.md  model-artifacts.md  package-structure.md  packaging-modes.md  phase-1-roadmap.md  private-source-derivation.md  profile-authoring.md  profiles.md  provenance.md  rag-export.md  rag-integrations.md  records.md  registry-index.md  security.md  spec-v0.1.md  training-ready-derivatives.md  v0.1-conformance.md  v0.1-core-freeze.md  when-not-to-use-okpf.md
docs/adr/: 0001-use-zip-based-kpack-archives.md  0002-keep-blockchain-optional.md  0003-separate-license-from-usage-policy.md  0004-use-json-schema-for-manifest-validation.md  README.md  (+1 more)
examples/: brewing_notes.md  evaluation-result-example.json
okpf_prep/: __init__.py  beerxml.py  chunking.py  cli.py  extractors.py  models.py  package_builder.py  profiles.py  prompts.py  reports.py  runner.py  text_cleanup.py  validation.py
profiles/: brewing_recipe.yaml  general_knowledge.yaml
reference/python/: README.md  okpf_validate.py  pyproject.toml
reference/python/okpf/: __init__.py  __main__.py  benchmark.py  cli.py  demo.py  export.py  manifest.py  pack.py  scaffold.py  validate.py
reference/python/okpf/eval/: __init__.py  auto_generate.py
reference/python/okpf/schemas/: __init__.py  contributor.schema.json  evaluation.schema.json  import_report.schema.json  license.schema.json  manifest.schema.json  provenance.schema.json  training-derivation.schema.json
reference/python/okpf/schemas/v0.1.0/: evaluation-result.schema.json  manifest.schema.json
reference/python/okpf/templates/: __init__.py
reference/python/okpf/templates/field-repair-checklist/: README.md.tmpl  manifest.json.tmpl  template.yaml
reference/python/okpf/templates/field-repair-checklist/artifacts/: checklist.md.tmpl
reference/python/okpf/templates/field-repair-checklist/records/: checklist-items.jsonl.tmpl
reference/python/okpf/templates/local-org-knowledge/: README.md.tmpl  manifest.json.tmpl  template.yaml
reference/python/okpf/templates/local-org-knowledge/artifacts/: policy.md.tmpl
reference/python/okpf/templates/local-org-knowledge/records/: knowledge.jsonl.tmpl
reference/python/okpf/templates/minimal/: README.md.tmpl  manifest.json.tmpl  template.yaml
reference/python/okpf/templates/minimal/artifacts/: guide.md.tmpl
reference/python/okpf/templates/rag-source/: README.md.tmpl  manifest.json.tmpl  template.yaml
reference/python/okpf/templates/rag-source/artifacts/: source.md.tmpl
reference/python/okpf/templates/rag-source/records/: chunks.jsonl.tmpl
reference/python/okpf/templates/software-onboarding/: README.md.tmpl  manifest.json.tmpl  template.yaml
reference/python/okpf/templates/software-onboarding/artifacts/: architecture.md.tmpl  setup.md.tmpl  troubleshooting.md.tmpl
reference/python/okpf/templates/software-onboarding/evals/: onboarding-questions.json.tmpl
reference/python/okpf/templates/software-onboarding/provenance/: sources.json.tmpl
reference/python/okpf/templates/software-onboarding/records/: decisions.jsonl.tmpl
schemas/: import_report.schema.json  manifest.schema.json  provenance-source-entry.schema.json  record.schema.json  task.schema.json
tests/: conftest.py  test_beerxml.py  test_benchmark.py  test_chunking.py  test_cli.py  test_cli_scaffold.py  test_demo.py  test_export.py  test_extractors.py  test_local_history_example.py  test_okpf_validate.py  test_ollama_backend.py  test_pack_archive.py  test_pack_sdk.py  test_package_builder.py  test_profiles.py  test_prompt_builder.py  test_runner_mock.py  test_schema_bundle_in_sync.py  test_sdk_validate.py  test_templates.py  test_text_cleanup.py  test_validation.py
tools/: README.md  ci_check_examples.py
(+213 files in other folders)
