[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okpf-prep"
version = "0.1.0"
description = "Prepare source documents into OKPF-compatible training packs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["okpf", "knowledge-pack", "training-data", "rag", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "click>=8.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jsonschema>=4.0",
]

[project.scripts]
okpf-prep = "okpf_prep.cli:main"

[project.urls]
Homepage = "https://github.com/ctoepfer/OKPF"
Repository = "https://github.com/ctoepfer/OKPF"
Issues = "https://github.com/ctoepfer/OKPF/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["okpf_prep*"]

[tool.setuptools.package-data]
okpf_prep = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
